<resources>
    <string name="app_name">DebuApp</string>
    <string name="login">Login</string>
    <string name="aamir_khan">Aamir khan</string>
    <string name="number">Number</string>
    <string name="send">Send</string>
    <string name="verification">Verification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="bottomline">Don\'t Recived The code ?</string>
    <string name="logout">Logout</string>
    <string name="dashboard_activity">Dashboard Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_is_on">chat is on</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="submit">Submit</string>
    <string name="User">user</string>
    <string name="Email_id">email id</string>
    <string name="Address">address</string>
    <string name="user_s_list">user\'s list</string>
    <string name="loader">Welcome to my app</string>
    <string name="image_picker">Image Picker</string>
    <string name="upload">Upload</string>
    <string name="mobile_no">Mobile No :</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="address">Address :</string>
    <string name="message">message</string>
    <string name="status">status</string>
    <string name="type">type</string>
    <string name="sttus">Status :</string>
    <string name="usrnme">Username :</string>
    <string name="profile">Profile</string>
    <string name="all_users">All Users</string>
    <string name="log">logout</string>
    <string name="chat">Chat</string>
    <string name="share">Share</string>
</resources>
