<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
 <item
     android:id="@+id/chat"
     android:icon="@drawable/chat"
     android:title="@string/chat"/>

    <item
        android:title="@string/all_users"
        android:icon="@drawable/user"
        android:id="@+id/user"/>

    <item
        android:id="@+id/image"
        android:title="@string/profile"
        android:icon="@drawable/person"/>


    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/share"/>
    <item
        android:id="@+id/rate"
        android:title="Rate"
        android:icon="@drawable/rate"/>

   <item
       android:id="@+id/logout"
       android:title="@string/log"
       android:icon="@drawable/power"/>
</menu>