<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".phoneVerificationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verification"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_margin="14dp"
                android:gravity="end"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7">

            <ImageView
                 android:layout_width="250dp"
                android:layout_height="200dp"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"/>
            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aamir_khan"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:layout_margin="14dp"
                android:gravity="end"/>



        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="32dp"
                    android:src="@drawable/otp" />
                <EditText
                    android:layout_marginLeft="16dp"
                    android:background="@null"
                    android:id="@+id/otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_otp"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    />
            </LinearLayout>

                <View
                    android:layout_gravity="center"
                    android:layout_width="180dp"
                    android:layout_height="2dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@color/white"/>
                <Button
                    android:layout_marginTop="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textSize="18sp"
                    android:id="@+id/submit"
                    android:background="@drawable/background"
                    android:textColor="@color/white"
                    android:paddingRight="50dp"
                    android:paddingLeft="50dp"/>


            <LinearLayout
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottomline"
                    android:textColor="#FFFFFF"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>


            </LinearLayout>




    </LinearLayout>

</RelativeLayout>