<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="200dp">

        <de.hdodenhof.circleimageview.CircleImageView
             android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            />
        <ImageView
            android:layout_marginBottom="15dp"
            android:padding="15dp"
            android:id="@+id/edit"
            android:background="@drawable/circle"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@drawable/edit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            />


    </RelativeLayout>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_no"

        android:textSize="24sp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_margin="20dp"
            android:textSize="24sp"/>
        <ImageView
            android:layout_margin="20dp"
            android:id="@+id/editname"
            android:background="@drawable/circle"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@drawable/edit"
            android:padding="15dp"

            />

    </LinearLayout>

   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
        >
       <TextView
           android:id="@+id/email"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/email"
           android:layout_margin="20dp"
           android:textSize="24sp"/>

       <ImageView
           android:layout_margin="20dp"
           android:id="@+id/editemail"
           android:background="@drawable/circle"
           android:layout_width="42dp"
           android:layout_height="42dp"
           android:src="@drawable/edit"
           android:padding="15dp" />



   </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_margin="20dp"
            android:textSize="24sp"/>

        <ImageView
            android:layout_margin="20dp"
            android:id="@+id/editadd"
            android:background="@drawable/circle"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@drawable/edit"
            android:padding="15dp" />





    </LinearLayout>




































</LinearLayout>