<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Loginactivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:gravity="end"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">


            <ImageView
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/aamir_khan"
                android:textColor="@color/white"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/phone"
                    android:layout_margin="10dp"/>


                <com.hbb20.CountryCodePicker
                    android:id="@+id/cpp"
                    app:ccp_contentColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />


                <EditText
                    android:id="@+id/number"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:inputType="phone"
                    android:textSize="16sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:background="@color/white"/>

            <Button
                android:id="@+id/send"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textSize="18sp">

            </Button>



        </LinearLayout>





    </LinearLayout>





</RelativeLayout>