<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Activities.Registeractivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:textColor="@color/white"
        android:id="@+id/number"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@null"
                android:hint="@string/User"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/Email_id"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/location" />

            <EditText

                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/Address"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/background"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>


</RelativeLayout>